--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -199,7 +199,7 @@ button:hover {
 #shareSelectButton:hover {
   background-color: #ffffff;
   color: #000000;
-  border-color: #0300ab;
+  border-color: #00ff00;
 }
 
 /*Estilos del link de las preguntas destacadas*/
