--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -202,6 +202,24 @@ button:hover {
   border-color: #00ff00;
 }
 
+.publicar_pregunta_boton {
+  background-color: #ffffff;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+  color: #000000;
+  padding: 10px 20px;
+  border: 2px solid #000000;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 12px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+
+
 /*Estilos del link de las preguntas destacadas*/
 a {
   transition: background-color 0.3s;  /* Transición suave del color de fondo */
