--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -202,7 +202,7 @@ button:hover {
   border-color: #00ff00;
 }
 
-.publicar_pregunta_boton {
+.publicar_pregunta_link #publicar_pregunta_boton {
   background-color: #ffffff;
   font-family: 'Playfair Display', serif;
   font-weight: bold;
@@ -217,6 +217,7 @@ button:hover {
   text-align: center;
   transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 }
+
 
 
 
