diseño de botones

--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -168,8 +168,6 @@ button:hover {
   color: #000000;
 }
 
-
-
 /* Estilo para el contenedor del botón de selección de tema y menú desplegable */
 .theme-selector-container {
   display: flex; /*Haces que el contenedor se pueda ordenar de forma flexible*/
@@ -184,13 +182,13 @@ button:hover {
   font-family: 'Playfair Display', serif;
   font-weight: bold;
   color: #000000;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border: 2px solid #000000;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 12px;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  font-size: 8px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   text-align: center;
   transition: background-color 0.3s, color 0.3s, border-color 0.3s;
 }
@@ -207,15 +205,43 @@ button:hover {
   font-family: 'Playfair Display', serif;
   font-weight: bold;
   color: #000000;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border: 2px solid #000000;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 12px;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  font-size: 8px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   text-align: center;
   transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+#publicar_pregunta_link:hover {
+  background-color: #ffffff;
+  color: #000000;
+  border-color: #00ff00;
+}
+
+.sugerencia_boton {
+  background-color: #ffffff;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold;
+  color: #000000;
+  padding: 5px 10px;
+  border: 2px solid #000000;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 8px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+.sugerencia_boton:hover{
+  background-color: #ffffff;
+  color: #000000;
+  border-color: #00ff00;
 }
 
 
