--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -236,7 +236,7 @@ button:hover {
 }
 
 /* Estilo para el botón de compartir al pasar el ratón */
-.sugerencia_boton #sugerencia_boton {
+.sugerencia_boton #sugerencia_boton:hover {
   background-color: #ffffff;
   color: #000000;
   border-color: #00ff00;
