--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -168,6 +168,26 @@ button:hover {
   color: #000000;
 }
 
+/*Boton de landing page*/
+.publicar_pregunta_link #publicar_pregunta_boton {
+  background-color: #ffffff;
+  font-family: 'Playfair Display', serif;
+  font-weight: bold; /*letra mas gruesa*/
+  color: #000000;
+  padding: 10px 30px;
+  border: 2px solid #000000; /* Cambiado para especificar el tipo de borde */
+  border-radius: 4px;
+  cursor: pointer;/*Cambiar el cursos a una manito*/
+  font-size: 16px;
+  margin-top: 10px;
+  transition: background-color 0.3s, color 0.3s;
+}
+.publicar_pregunta_link #publicar_pregunta_boton:hover {
+  background-color: #ffffff;
+  color: #000000;
+  border-color: #00ff00;
+}
+
 /* Estilo para el contenedor del botón de selección de tema y menú desplegable */
 .theme-selector-container {
   display: flex; /*Haces que el contenedor se pueda ordenar de forma flexible*/
@@ -200,23 +220,11 @@ button:hover {
   border-color: #00ff00;
 }
 
-.publicar_pregunta_link #publicar_pregunta_boton {
-  background-color: #ffffff;
-  font-family: 'Playfair Display', serif;
-  font-weight: bold; /*letra mas gruesa*/
-  color: #000000;
-  padding: 10px 30px;
-  border: 2px solid #000000; /* Cambiado para especificar el tipo de borde */
-  border-radius: 4px;
-  cursor: pointer;/*Cambiar el cursos a una manito*/
-  font-size: 16px;
-  margin-top: 10px;
-  transition: background-color 0.3s, color 0.3s;
-}
-.publicar_pregunta_link #publicar_pregunta_boton:hover {
-  background-color: #ffffff;
-  color: #000000;
-  border-color: #00ff00;
+.icon-button{
+  width:30px;
+  height: 30px;
+  background-image: url("");
+  background-size: cover;
 }
 
 .sugerencia_boton #sugerencia_boton {
