--- a/preguntor_style.css
+++ b/preguntor_style.css
@@ -154,7 +154,7 @@ button {
   font-weight: bold; /*letra mas gruesa*/
   color: #FFFFFF;
   padding: 10px 30px;
-  border: none;
+  border: 2px solid #000000;
   border-radius: 4px;
   cursor: pointer;/*Cambiar el cursos a una manito*/
   font-size: 16px;
