--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -15,8 +15,15 @@
   <!-- Titulo-->
   <title>preguntor</title>
   <!-- Enlace a la hoja de estilos externa -->
-  <link rel="stylesheet" type="text/css" href="preguntor_style.css">
+  <link rel="stylesheet" type="text/css" href="diseño/preguntor_style.css">
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-ML5NSC6C');</script>
+    <!-- End Google Tag Manager -->
 </head>
  <!--Etiqueta del cuerpo de la pagina, todo el contenido visible -->
 <body>
@@ -45,7 +52,7 @@
 
    <!-- Contenido de la pagina-->
   <!-- Encabezado del cuerpo de la página -->
-  <h1>⚠️PRUEBAS⚠️ | Crea conexiones a través de preguntas</h1>
+  <h1>Crea conexiones a través de preguntas</h1>
    <!-- Descripcion del juego-->
   <h4>1) Buscas a alguien → 2) Eliges el tema. → 3) Haces la pregunta. </h4>
   
@@ -125,7 +132,7 @@
         <img src="precios/images/logo.png" alt="Logo de tu empresa">
 
         <!-- Texto de derechos de autor -->
-        <p>&copy; ⚠️PRUEBAS | 2024 Preguntor. Todos los derechos reservados. v1.0.0.0⚠️</p>
+        <p>&copy; 2024 Preguntor. Todos los derechos reservados. v1.0.0.0</p>
     </div>
 </footer>
   </div>
